--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/drazenp/complex-to-plain-table/issues"
   },
-  "homepage": "https://github.com/drazenp/complex-to-plain-table#readme"
+  "homepage": "https://github.com/drazenp/complex-to-plain-table#readme",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "jsdom": "^11.6.2",
+    "mocha": "^5.0.0"
+  }
 }
