--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "complex-to-plain-table",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Simplify complex tables by splitting merged cells",
   "main": "src/index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
