--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "lint": "eslint src/index.js",
-    "dist": "rm -fr dist && mkdir dist",
+    "dist": "rimraf -fr dist && mkdir dist",
     "copy": "cp src/index.js dist/compexToPlainTable.js",
     "uglify": "uglifyjs src/index.js -m -o dist/compexToPlainTable.min.js",
     "test": "mocha",
@@ -30,6 +30,7 @@
     "eslint": "^4.17.0",
     "jsdom": "^11.6.2",
     "mocha": "^5.0.0",
+    "rimraf": "^2.6.2",
     "uglify-js": "^3.3.10"
   }
 }
