--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ install:
   - npm install
 
 script:
-  - npm build
-  - npm test
+  - npm run build
+  - npm run cover
+
+# Send coverage data to Coveralls
+after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
