--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "uglify": "uglifyjs src/index.js -m -o dist/compexToPlainTable.min.js",
     "test": "mocha",
     "build": "npm run lint && npm run dist && npm run copy && npm run uglify",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "cover": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec test/*.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,9 @@
   "homepage": "https://github.com/drazenp/complex-to-plain-table#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "eslint": "^4.17.0",
+    "istanbul": "^0.4.5",
     "jsdom": "^11.6.2",
     "mocha": "^5.0.0",
     "rimraf": "^2.6.2",
